# Personal-Website

./: .dockerignore  .gcloudignore  .gitignore  BidensBadDay.html  Cargo.toml  Dockerfile  Rocket.toml  amplify.yml  app.yaml  bbb.html  contact.html  discord  footer.js  github.js  header.js  index.html  main.js  nav.js  package-lock.json  package.json  projects.html  readme.md  server.js  style.css  vite.config.ts
.github/workflows/: rust.yml
Client/: BidensBadDay.html  footer.js  header.js  index.html  main.js  projects.html
client/: .htaccess  contact.html  github.js  main.js  projects.html  readme.md
routes/: bbb.js  discordverify.js  githubprojects.js  home.js  projects.js
server/: package-lock.json  package.json  server.js
src/: app.css  app.html  main.rs
src/components/: coding-project.svelte  footer.svelte  social-icon.svelte
src/components/nav/: nav-item.svelte  nav-spacer.svelte  navbar.svelte
src/lib/components/: coding-project.svelte  footer.svelte  social-icon-with-text.svelte
src/lib/components/nav/: nav-item.svelte  navbar.svelte
src/lib/scripts/: AnimateIntersections.ts  googleCloud.ts  youtubeVideos.ts
src/routes/: +error.svelte  +layout.svelte  +page.server.ts  +page.svelte
src/routes/bbb/: +page.server.ts
src/routes/bidensbadday/: +page.svelte
src/routes/blog/: +page.server.ts  +page.svelte
src/routes/robots.txt/: +server.ts
src/scripts/: errorHandling.ts  googleCloud.ts
static/: sitemap.xml
