[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["json"] }
futures = "0.3.26"
tokio = { version = "1.25.0", features = ["full"] } # for our async runtime
rocket = "0.5.0-rc.2"